[ADD] New Images and texts

--- a/index.html
+++ b/index.html
@@ -5,112 +5,131 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>big B soft</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<h1>big B soft</h1>
-					<p>Digital Agency specializing in Mobile App Development</p>
-				</header>
-				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Proceed</a>
-				</footer>
-			</section>
+<head>
+    <title>big B soft</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
 
-		<!-- Banner -->
-			<section id="banner">
-				<header>
-					<h2>Native Mobile App development</h2>
-				</header>
-				<p>A brand new site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
-				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
-				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
-				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
-				</footer>
-			</section>
+<body>
 
-		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
-				<a href="#" class="image fit"><img src="images/app_design.jpg" alt="" /></a>
-				<div class="inner">
-					<header>
-						<h2>Apps Design<br />
-						using native feel</h2>
-					</header>
-					<p>We design and develop app using native features which is why end users alway feels it home on our design.</p>
-				</div>
-			</article>
+    <!-- Header -->
+    <section id="header">
+        <header>
+            <h1>big B soft</h1>
+            <p>Pioneer in data drive health care application provider</p>
+        </header>
+        <footer>
+            <a href="#banner" class="button style2 scrolly-middle">Find out more</a>
+        </footer>
+    </section>
 
-		<!-- Feature 2 -->
-			<article class="container box style1 left">
-				<a href="#" class="image fit"><img src="images/app_development.jpg" alt="" /></a>
-				<div class="inner">
-					<header>
-						<h2>iOS and Android<br />
-						native Apps</h2>
-					</header>
-					<p>Native app developement is our strength</p>
-				</div>
-			</article>
+    <!-- Banner -->
+    <section id="banner">
+        <header>
+            <h2>Health and Data</h2>
+        </header>
+        <p>We solve problem related to health care using data drive approach. We have a Proprietary Algorithms.</p>
+        <footer>
+            <a href="#first" class="button style2 scrolly">Proceed</a>
+        </footer>
+    </section>
 
-		<!-- Portfolio -->
-			<article class="container box style2">
-				<header>
-					<h2>App Development</h2>
-					<p>Design to match the expectation<br />
-					Design to please the user</p>
-				</header>
-				<div class="inner gallery">
-					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
-					</div>
-					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u 12u(mobile)"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div>
-				</div>
-			</article>
+    <!-- Banner -->
+    <section id="banner">
+        <header>
+            <h2>Agility</h2>
+        </header>
+        <p>We belive in Agility.<br /> If you are going to do something, do it <strong>Today</strong>. Tomorrow is too late.<br /> </p>
+        <footer>
+            <a href="#first" class="button style2 scrolly">Proceed</a>
+        </footer>
+    </section>
 
-		<!-- Footer -->
-		<section id="footer">
-			<ul class="icons">
-				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-				<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-				<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-			</ul>
-			<div class="copyright">
-				<ul class="menu">
-					<li>&copy; big B soft. All rights reserved.</li>
-				</ul>
-			</div>
-		</section>
+    <!-- Feature 1 -->
+    <article id="first" class="container box style1 right">
+        <a href="#" class="image fit"><img src="images/app_design.jpg" alt="" /></a>
+        <div class="inner">
+            <header>
+                <h2>HIPAA compliant</h2>
+            </header>
+            <p>We design system to be accessible from a range of devices including iPhones, laptops and Android. <br> The central feature of our software solution is the HIPPA compliance</p>
+        </div>
+    </article>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+    <!-- Feature 2 -->
+    <article class="container box style1 left">
+        <a href="#" class="image fit"><img src="images/app_development.jpg" alt="" /></a>
+        <div class="inner">
+            <header>
+                <h2>iOS and Android<br /> native Apps</h2>
+            </header>
+            <p>Native app developement is our strength we useing CoreML and Tensorflow</p>
+        </div>
+    </article>
 
-	</body>
+    <!-- Portfolio -->
+    <article class="container box style2">
+        <header>
+            <h2>Happy customers = happy employees</h2>
+            <p>We work hard for your happiness<br /> Your happiness is our strength</p>
+        </header>
+        <div class="inner gallery">
+            <div class="row 0%">
+                <div class="3u 12u(mobile)">
+                    <a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a>
+                </div>
+                <div class="3u 12u(mobile)">
+                    <a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Raven" /></a>
+                </div>
+                <div class="3u 12u(mobile)">
+                    <a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a>
+                </div>
+            </div>
+            <div class="row 0%">
+                <div class="3u 12u(mobile)">
+                    <a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a>
+                </div>
+                <div class="3u 12u(mobile)">
+                    <a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a>
+                </div>
+                <div class="3u 12u(mobile)">
+                    <a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <!-- Footer -->
+    <section id="footer">
+        <ul class="icons">
+            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+            <li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+            <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+            <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        </ul>
+        <div class="copyright">
+            <ul class="menu">
+                <li>&copy; big B soft. All rights reserved.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+    <script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
