[ADD] Clients Company LOGOs

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Overflow by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
@@ -21,7 +16,7 @@
     <section id="header">
         <header>
             <h1>big B soft</h1>
-            <p>Pioneer in data drive health care application provider</p>
+            <p>Pioneer in data driven health care application provider</p>
         </header>
         <footer>
             <a href="#banner" class="button style2 scrolly-middle">Find out more</a>
@@ -33,7 +28,7 @@
         <header>
             <h2>Health and Data</h2>
         </header>
-        <p>We solve problem related to health care using data drive approach. We have a Proprietary Algorithms.</p>
+        <p>We solve problem related to health care using data driven approach. Our data scientist have developed Proprietary Algorithms.</p>
         <footer>
             <a href="#first" class="button style2 scrolly">Proceed</a>
         </footer>
@@ -44,7 +39,8 @@
         <header>
             <h2>Agility</h2>
         </header>
-        <p>We belive in Agility.<br /> If you are going to do something, do it <strong>Today</strong>. Tomorrow is too late.<br /> </p>
+        <p>We belive in Agility.<br />If you are going to do something, do it <strong>Today</strong>. Tomorrow is too late.<br /> </p><br>
+        <p>We have PMP certified Project Managers to make sure we deliver what we promise.</p>>
         <footer>
             <a href="#first" class="button style2 scrolly">Proceed</a>
         </footer>
@@ -81,24 +77,24 @@
         <div class="inner gallery">
             <div class="row 0%">
                 <div class="3u 12u(mobile)">
-                    <a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a>
+                    <a href="images/fulls/supercare.jpg" class="image fit"><img src="images/thumbs/supercare.jpg" alt="" title="Super Care Health" /></a>
                 </div>
                 <div class="3u 12u(mobile)">
-                    <a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Raven" /></a>
+                    <a href="images/fulls/thenewlifechallenge.jpg" class="image fit"><img src="images/thumbs/thenewlifechallenge.jpg" alt="" title="The New Life Challenge" /></a>
                 </div>
                 <div class="3u 12u(mobile)">
-                    <a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a>
+                    <a href="images/fulls/medigram.jpg" class="image fit"><img src="images/thumbs/medigram.jpg" alt="" title="Medigram - Medical Communication" /></a>
                 </div>
             </div>
             <div class="row 0%">
                 <div class="3u 12u(mobile)">
-                    <a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a>
+                    <a href="images/fulls/mygympal.jpg" class="image fit"><img src="images/thumbs/mygympal.jpg" alt="" title="MyGymPal - Fitness" /></a>
                 </div>
                 <div class="3u 12u(mobile)">
-                    <a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a>
+                    <a href="images/fulls/amc.jpg" class="image fit"><img src="images/thumbs/amc.jpg" alt="" title="AMC" /></a>
                 </div>
                 <div class="3u 12u(mobile)">
-                    <a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a>
+                    <a href="images/fulls/cainthus.jpg" class="image fit"><img src="images/thumbs/cainthus.jpg" alt="" title="Cainthus" /></a>
                 </div>
             </div>
         </div>
